--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.10.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
