--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.10.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
