--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^9.1.7",
     "prisma": "^6.16.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
