--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/nextjs-auth0": "^4.10.0",
     "@prisma/client": "6.17.0",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
