--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
