--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/groq": "^2.0.24",
     "@auth0/nextjs-auth0": "^4.10.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.17.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
@@ -25,6 +26,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
     "vercel": "^48.2.9",
     "zod": "^4.1.12"
