--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "googleapis": "^162.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "pdf-parse": "1.1.1",
