--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "vercel": "^48.2.9",
     "zod": "^4.1.12"
