--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^2.0.51",
     "@auth0/nextjs-auth0": "^4.10.0",
     "@hookform/resolvers": "^5.2.2",
+    "@octokit/app": "^16.1.1",
     "@prisma/client": "6.17.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -29,7 +30,6 @@
     "googleapis": "^162.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
-    "pdf-parse": "1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
