--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "googleapis": "^162.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
     "sharp": "^0.34.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vercel": "^48.2.9",
     "zod": "^4.1.12"
