fix: add github info in the environement variables

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,11 @@ DATABASE_URL=
 OPENAI_API_KEY=
 
 
-GITHUB_APP_ID=
-GITHUB_INSTALLATION_ID=
+NEXT_PUBLIC_GITHUB_OWNER=
+NEXT_PUBLIC_GITHUB_REPO=
 GITHUB_PRIVATE_KEY=""
 
+GOOGLE_SERVICE_PRIVATE_KEY=
+GOOGLE_SERVICE_CLIENT_EMAIL=
+GOOGLE_SERVICE_ACCOUNT_CLIENT_ID=
+GOOGLE_SERVICE_SHARED_DRIVE_ID=
