--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^2.0.51",
     "@auth0/nextjs-auth0": "^4.10.0",
     "@hookform/resolvers": "^5.2.2",
