--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "googleapis": "^162.0.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-bits": "^1.0.5",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
